update seeder
